--- a/COA LAB/fetch.qsf
+++ b/COA LAB/fetch.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
-set_global_assignment -name TOP_LEVEL_ENTITY fetch_wrapper
+set_global_assignment -name TOP_LEVEL_ENTITY fetch
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "00:44:24  NOVEMBER 05, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.1 Lite Edition"
@@ -56,6 +56,9 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name VHDL_FILE fetch.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE sevenSegement.vhd
 set_global_assignment -name VHDL_FILE MyPackage.vhd
 set_location_assignment PIN_AB28 -to reset
@@ -116,8 +119,4 @@ set_location_assignment PIN_AB15 -to SevenSegement6[4]
 set_location_assignment PIN_AA15 -to SevenSegement6[5]
 set_location_assignment PIN_AC17 -to SevenSegement6[6]
 set_location_assignment PIN_AA14 -to SevenSegement7[6]
-set_global_assignment -name VHDL_FILE fetch_wrapper.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
